Update Lycopene description and category

--- a/tienda.html
+++ b/tienda.html
@@ -227,6 +227,7 @@
                 <!-- Grid de Productos Principal -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 gap-y-10">
 
+
                     <!-- Producto: Agua de Mar -->
                     <div data-category="Circulación - Metabólico - Energía"
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
@@ -505,6 +506,71 @@
                                 intestinal natural y agente desparasitante eficaz.</p>
                             <div class="mt-auto flex items-center justify-between pt-2">
                                 <span class="font-serif font-black text-xl text-[#27724e]">S/. 50</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Lycopene -->
+                    <div data-category="Sistema Hormonal"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("lycopene.jpg");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Lycopene</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-6"
+                                title="El lycopene destaca en la medicina preventiva por su capacidad para combatir el estrés oxidativo a nivel celular. Es un aliado clave en la salud hormonal de la mujer, siendo utilizado habitualmente como coadyuvante en el manejo y prevención de quistes y fibromas. Su potente acción antioxidante ayuda a reducir la inflamación y promueve el equilibrio regenerativo de los tejidos, fortaleciendo el bienestar ginecológico y el sistema inmunológico desde un enfoque natural y preventivo.">
+                                El lycopene destaca en la medicina preventiva por su capacidad para combatir el estrés
+                                oxidativo a nivel celular. Es un aliado clave en la salud hormonal de la mujer, siendo
+                                utilizado habitualmente como coadyuvante en el manejo y prevención de quistes y
+                                fibromas. Su potente acción antioxidante ayuda a reducir la inflamación y promueve el
+                                equilibrio regenerativo de los tejidos, fortaleciendo el bienestar ginecológico y el
+                                sistema inmunológico desde un enfoque natural y preventivo.</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 150</span>
+                                <button
+                                    class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
+                                    <span class="material-symbols-outlined">add_shopping_cart</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto: Vinagre de Sidra de Manzana -->
+                    <div data-category="Circulación - Metabólico - Energía"
+                        class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
+                        <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
+                            <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
+                                style='background-image: url("vinagre-de-sidra-de-manzana.jpg");'></div>
+                            <button
+                                class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
+                                <span class="material-symbols-outlined text-sm">favorite</span>
+                            </button>
+                        </div>
+                        <div class="flex flex-col flex-1 gap-1">
+                            <h3
+                                class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
+                                Vinagre de Sidra de Manzana</h3>
+                            <p class="text-[#27724e]/70 text-xs mb-2 line-clamp-6"
+                                title="El Vinagre de Sidra de Manzana es un pilar de la nutrición funcional gracias a su alto contenido de ácido acético y enzimas naturales. Desde un enfoque preventivo, actúa como un potente regulador de la glucosa, mejorando la sensibilidad a la insulina y evitando picos glucémicos después de las comidas. Su consumo regular contribuye a la salud cardiovascular, ayudando a equilibrar los niveles de lípidos en sangre y promoviendo una digestión eficiente que fortalece la microbiota intestinal. Es una herramienta metabólica esencial para quienes buscan prevenir trastornos crónicos, optimizar el control del peso y reforzar el sistema inmunológico a través de la medicina natural.">
+                                El Vinagre de Sidra de Manzana es un pilar de la nutrición funcional gracias a su alto
+                                contenido de ácido acético y enzimas naturales. Desde un enfoque preventivo, actúa como
+                                un potente regulador de la glucosa, mejorando la sensibilidad a la insulina y evitando
+                                picos glucémicos después de las comidas. Su consumo regular contribuye a la salud
+                                cardiovascular y promoviendo una digestión eficiente.</p>
+                            <div class="mt-auto flex items-center justify-between pt-2">
+                                <span class="font-serif font-black text-xl text-[#27724e]">S/. 20</span>
                                 <button
                                     class="bg-[#27724e]/10 hover:bg-[#27724e] text-[#27724e] hover:text-white p-2.5 rounded-xl transition-all shadow-sm">
                                     <span class="material-symbols-outlined">add_shopping_cart</span>
